--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
-    "husky": "^7.0.0"
+    "@types/node": "^17.0.12",
+    "husky": "^7.0.0",
+    "typescript": "^4.5.5"
   }
 }
