--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
     "husky": "^7.0.0",
+    "lint-staged": "^12.3.1",
     "typescript": "^4.5.5"
   }
 }
