--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.12",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "eslint": "^8.7.0",
@@ -22,7 +23,9 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
     "husky": "^7.0.0",
+    "jest": "^27.4.7",
     "lint-staged": "^12.3.1",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   }
 }
