--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,8 @@
   "rules": {
     "@typescript-eslint/consistent-type-assertions": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
-    "@typescript-eslint/camelcase": "off"
+    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/consistent-type-definitions": "off",
+    "@typescript-eslint/no-unused-vars": "off"
   }
 }
