--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
@@ -9,12 +9,16 @@
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "skipLibCheck": true,
+    "strict": false,
+    "isolatedModules": true,
+    "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "rootDirs": [
       "src",
       "tests"
     ],
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "*"
@@ -30,7 +34,5 @@
     "node_modules",
     "**/node_modules/*"
   ],
-  "include": [
-    "src"
-  ]
+  "include": ["**/*.ts", "**/*.tsx", "jest.setup.js"]
 }
