--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@commitlint/cli": "16.1.0",
     "@commitlint/config-conventional": "16.0.0",
-    "@types/faker": "^6.6.9",
+    "@types/faker": "5.5.9",
     "@types/jest": "27.4.0",
     "@types/node": "17.0.12",
     "@typescript-eslint/eslint-plugin": "5.10.1",
@@ -26,7 +26,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-standard": "5.0.0",
-    "faker": "^6.6.6",
+    "faker": "5.5.3",
     "husky": "7.0.0",
     "jest": "27.4.7",
     "lint-staged": "12.3.1",
