--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@commitlint/cli": "16.1.0",
     "@commitlint/config-conventional": "16.0.0",
+    "@types/axios": "^0.14.0",
     "@types/faker": "5.5.9",
     "@types/jest": "27.4.0",
     "@types/node": "17.0.12",
@@ -32,5 +33,8 @@
     "lint-staged": "12.3.1",
     "ts-jest": "27.1.3",
     "typescript": "4.5.5"
+  },
+  "dependencies": {
+    "axios": "^0.25.0"
   }
 }
