--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/faker": "5.5.9",
     "@types/jest": "27.4.0",
     "@types/node": "17.0.12",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "5.10.1",
     "eslint": "8.7.0",
     "eslint-config-standard-with-typescript": "11",
@@ -35,6 +37,8 @@
     "typescript": "4.5.5"
   },
   "dependencies": {
-    "axios": "^0.25.0"
+    "axios": "^0.25.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
