--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "5.10.1",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.1",
     "eslint": "8.7.0",
     "eslint-config-standard-with-typescript": "11",
     "eslint-plugin-import": "2.25.4",
@@ -34,9 +35,14 @@
     "eslint-plugin-standard": "5.0.0",
     "faker": "5.5.3",
     "husky": "7.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "27.4.7",
     "lint-staged": "12.3.1",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "ts-jest": "27.1.3",
+    "ts-loader": "^9.2.6",
     "typescript": "4.5.5",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2",
